--- a/src/Components/Campus/Campus.css
+++ b/src/Components/Campus/Campus.css
@@ -13,3 +13,14 @@
   width: 23%;
   border-radius: 10px;
 }
+/* media query */
+@media (max-width: 700px) {
+  .gallery {
+    flex-wrap: wrap;
+  }
+
+  .gallery img {
+    width: 48%;
+    margin-bottom: 25px;
+  }
+}
