--- a/src/Components/Testimonials/Testimonials.css
+++ b/src/Components/Testimonials/Testimonials.css
@@ -58,3 +58,44 @@
   margin-bottom: 20px;
   font-size: 15px;
 }
+
+/* media query */
+@media (max-width: 800px) {
+  .testimonials {
+    padding: 0 40px;
+  }
+
+  .next-btn,
+  .back-btn {
+    padding: 10px;
+    width: 35px;
+  }
+
+  .testimonials ul li {
+    padding: 10px;
+  }
+
+  .slide {
+    padding: 10px;
+  }
+
+  .slide img {
+    width: 50px;
+    border: 3px solid mediumaquamarine;
+  }
+}
+
+@media (max-width: 600px) {
+  .user-info {
+    display: block;
+    margin-bottom: 10px;
+  }
+
+  .user.info h3 {
+    font-size: 16px;
+  }
+
+  .slide p {
+    font-size: 12px;
+  }
+}
