--- a/src/index.css
+++ b/src/index.css
@@ -37,3 +37,15 @@ a {
   background-color: mediumturquoise;
   color: white;
 }
+
+/* media query */
+@media (max-width: 1200px) {
+  .container {
+    padding-left: 5%;
+    padding-right: 5%;
+  }
+
+  .btn {
+    padding: 14px 22px;
+  }
+}
