--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -21,9 +21,12 @@
 .play-icon {
   width: 60px;
   position: absolute;
-  top: 50%;
+  top: 30%;
   left: 50%;
+  border-radius: 50%;
+  background-color: rgb(127, 246, 242);
   transform: translate(-50%, 50%);
+  cursor: pointer;
 }
 .about h3 {
   font-weight: 600;
