--- a/src/Components/Testimonials/Testimonials.css
+++ b/src/Components/Testimonials/Testimonials.css
@@ -49,7 +49,7 @@
   width: 65px;
   border-radius: 50%;
   margin-right: 10px;
-  border: 4px solid;
+  border: 4px solid mediumaquamarine;
 }
 
 .user-info {
